--- a/homepage.html
+++ b/homepage.html
@@ -1,12 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://kit.fontawesome.com/ce18d120fc.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <title>Front-end developer - Adelina Hetman</title>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg bg-light shadow-sm">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Adelina Hetman</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/homepage.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <h1>Adelina Hetman</h1>
+    <h2>Front-end developer based in Europe</h2>
+    <h3>Welcome to my page! 😉</h3>
+    <div class="row">
+      <div class="col-sm-5">
+        <img
+          src="/Images/My photo.jpg"
+          class="img-fluid photo rounded-3 shadow-sm border-3"
+          alt="My photo"
+          title="Adelina Hetman photo"
+        />
+      </div>
+      <div class="col-sm-7">
+        <p>I'm from Kyiv, Ukraine</p>
+        <p1>I'm able to create sites using the next:</p1>
+        <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>Boostrap</li>
+          <li>Responsive features</li>
+          <li>GitHub</li>
+          <li>Netlify (for hosting the projects)</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="container text-center">
+      <p3> Designed and coded by Adelina Hetman, 2022 </p3>
+    </div>
+  </body>
 </html>
