--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,88 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://kit.fontawesome.com/ce18d120fc.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <nav class="navbar navbar-expand-lg bg-light shadow-sm">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Adelina Hetman</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/homepage.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="/">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <h2 class="text-center m-4">Portfolio</h2>
+    <h4>Let's start...</h4>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-5">
+          <h3>This is my first project where I used JavaScript 👩🏻‍💻</h3>
+        </div>
+        <div class="col-sm-7"></div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-7">
+          <img
+            src="/Images/Photography.png"
+            alt="photography"
+            title="Architectual photography"
+            class="img-fluid rounded-3 shadow-sm border-3"
+          />
+        </div>
+        <div class="col-sm-5">
+          <p>I am fond of Architectual photography.</p>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <p2 class="m-5" id="contact">
+        📩 Contact me
+        <a href="mailto: adelhetman@gmail.com"> adelhetman@gmail.com </a>
+      </p2>
+    </div>
+    <div class="container text-center">
+      <p3> Designed and coded by Adelina Hetman, 2022 </p3>
+    </div>
+  </body>
 </html>
