--- a/homepage.html
+++ b/homepage.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-      crossorigin="anonymous"
-    ></script>
+    <title>Adelina Hetman - Front-end developer</title>
+    <meta
+      name="description"
+      content="Professional Front-end developer /Adelina Hetman/"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,14 +17,17 @@
       crossorigin="anonymous"
     />
     <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
+    <script
       src="https://kit.fontawesome.com/ce18d120fc.js"
       crossorigin="anonymous"
     ></script>
-
-    <title>Front-end developer - Adelina Hetman</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-light shadow-sm">
+    <nav class="navbar navbar-expand-lg bg-light shadow-sm fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Adelina Hetman</a>
         <button
@@ -68,7 +71,7 @@
           src="/Images/My photo.jpg"
           class="img-fluid photo rounded-3 shadow-sm border-3"
           alt="My photo"
-          title="Adelina Hetman photo"
+          title="Adelina Hetman photo" id="myPhoto"
         />
       </div>
       <div class="col-sm-7">
