--- a/portfolio.html
+++ b/portfolio.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-      crossorigin="anonymous"
-    ></script>
+    <title>Adelina Hetman /Front-end developer/</title>
+    <meta
+      name="description"
+      content="Professional Front-end developer /Adelina Hetman/"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,13 +16,19 @@
       crossorigin="anonymous"
     />
     <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
+    <script
       src="https://kit.fontawesome.com/ce18d120fc.js"
       crossorigin="anonymous"
     ></script>
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-light shadow-sm">
+    <nav class="navbar navbar-expand-lg bg-light shadow-sm fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Adelina Hetman</a>
         <button
@@ -53,16 +59,34 @@
         </div>
       </div>
     </nav>
-    <h2 class="text-center m-4">Portfolio</h2>
-    <h4>Let's start...</h4>
-    <div class="container">
+    <div class="container allProjects">
+    <div class="container mb-5 portfolio">
+    <h2 class="text-center mb-4">Portfolio</h2>
+    <h5 class="m-3 mb-5">Let's start...</h5>
+    <div class="container mt-4">
       <div class="row">
         <div class="col-sm-5">
-          <h3>This is my first project where I used JavaScript 👩🏻‍💻</h3>
+          <h3 class="mb-5">Travelling page</h3>
+          <p>This is my first project where I've used JavaScript 👩🏻‍💻. It was an interesting discovering. To see the results push the button below.</p>
+       <div class="navigation-links mb-5">
+      <a href="ttps://aquamarine-treacle-1395c8.netlify.app/" class="primary-link" title="Travelling page">To visit the page</a>
+      <a href="/portfolio.html#contact" class="secondary-link" title="Contact Adelina Hetman">Contact me</a>
+    </div>
         </div>
-        <div class="col-sm-7"></div>
+
+        <div class="col-sm-7">
+          <img
+            src="/Images/Travelling.png"
+            alt="Travelling photo"
+            title="Carpathians"
+            class="img-fluid rounded-3 shadow-sm border-3"
+          />
+        </div>
       </div>
     </div>
+  </div>
+
+
     <div class="container">
       <div class="row">
         <div class="col-sm-7">
@@ -73,6 +97,7 @@
             class="img-fluid rounded-3 shadow-sm border-3"
           />
         </div>
+        <di
         <div class="col-sm-5">
           <p>I am fond of Architectual photography.</p>
         </div>
@@ -87,5 +112,6 @@
     <div class="container text-center">
       <p3> Designed and coded by Adelina Hetman, 2022 </p3>
     </div>
+  </div>
   </body>
 </html>
