added texts and css

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,58 +60,105 @@
       </div>
     </nav>
     <div class="container allProjects">
-    <div class="container mb-5 portfolio">
-    <h2 class="text-center mb-4">Portfolio</h2>
-    <h5 class="m-3 mb-5">Let's start...</h5>
-    <div class="container mt-4">
-      <div class="row">
-        <div class="col-sm-5">
-          <h3 class="mb-5">Travelling page</h3>
-          <p>This is my first project where I've used JavaScript 👩🏻‍💻. It was an interesting discovering. To see the results push the button below.</p>
-       <div class="navigation-links mb-5">
-      <a href="ttps://aquamarine-treacle-1395c8.netlify.app/" class="primary-link" title="Travelling page">To visit the page</a>
-      <a href="/portfolio.html#contact" class="secondary-link" title="Contact Adelina Hetman">Contact me</a>
-    </div>
+      <div class="container mb-5 portfolio">
+        <h2 class="text-center mb-4">Portfolio</h2>
+        <h5 class="m-3 mb-5">Let's start...</h5>
+        <div class="container mt-4">
+          <div class="row">
+            <div class="col-sm-5">
+              <h3 class="mb-5">Travelling page</h3>
+              <p>
+                This is my first project where I've used JavaScript 👩🏻‍💻. It was
+                an interesting discovering. To see the results push the button
+                below.
+              </p>
+              <div class="navigation-links mb-5">
+                <a
+                  href="https://aquamarine-treacle-1395c8.netlify.app/"
+                  class="primary-link"
+                  title="Travelling page"
+                  >To visit the page</a
+                >
+                <a
+                  href="/portfolio.html#contact"
+                  class="secondary-link"
+                  title="Contact Adelina Hetman"
+                  >Contact me</a
+                >
+              </div>
+            </div>
+            <div class="col-sm-7">
+              <img
+                src="/Images/Travelling.png"
+                alt="Travelling photo"
+                title="Carpathians"
+                class="img-fluid rounded-3 shadow-sm border-3" width="300px"
+              />
+            </div>
+          </div>
         </div>
-
-        <div class="col-sm-7">
-          <img
-            src="/Images/Travelling.png"
-            alt="Travelling photo"
-            title="Carpathians"
-            class="img-fluid rounded-3 shadow-sm border-3"
-          />
+      </div>
+      <div class="container mt-4">
+          <div class="row">
+            <div class="col-sm-5">
+              <img
+                src="/Images/Weather application,forecast.png"
+                alt="Travelling photo"
+                title="Weaher App"
+                class="img-fluid rounded-3 shadow-sm border-3" width="900px"
+              />
+            </div>
+            <div class="col-sm-7">
+<h3 class="mb-3">Weather Application</h3>
+              <p>
+                In this project I've implemented API and perform Weather forecast for a week. There is an ability to convert the temperatureinto from C° to F° and vice versa. Here you can find max and min temperature during the day.</p>
+                <p>You can Enter any city to get the Weather forecast. The images are correspond to current weather. Also there is an actual time on the page.
+              </p>
+              <div class="navigation-links mb-5">
+                <a
+                  href="https://fluffy-cobbler-4d3053.netlify.app/"
+                  class="primary-link"
+                  title="Weather app"
+                  >Weather App</a
+                >
+                <a
+                  href="/portfolio.html#contact"
+                  class="secondary-link"
+                  title="Contact Adelina Hetman"
+                  >Contact me</a>
+              </div>
+            </div>
+            
+          </div>
         </div>
       </div>
     </div>
   </div>
-
-
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-7">
-          <img
-            src="/Images/Photography.png"
-            alt="photography"
-            title="Architectual photography"
-            class="img-fluid rounded-3 shadow-sm border-3"
-          />
-        </div>
-        <di
-        <div class="col-sm-5">
-          <p>I am fond of Architectual photography.</p>
+</div>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-7">
+            <img
+              src="/Images/Photography.png"
+              alt="photography"
+              title="Architectual photography"
+              class="img-fluid rounded-3 shadow-sm border-3"
+            />
+          </div>
+          <div class="col-sm-5">
+            <p>I am fond of Architectual photography.</p>
+          </div>
         </div>
       </div>
+      <div class="container">
+        <p2 class="m-5" id="contact">
+          📩 Contact me
+          <a href="mailto: adelhetman@gmail.com"> adelhetman@gmail.com </a>
+        </p2>
+      </div>
+      <div class="container text-center">
+        <p3> Designed and coded by Adelina Hetman, 2022 </p3>
+      </div>
     </div>
-    <div class="container">
-      <p2 class="m-5" id="contact">
-        📩 Contact me
-        <a href="mailto: adelhetman@gmail.com"> adelhetman@gmail.com </a>
-      </p2>
-    </div>
-    <div class="container text-center">
-      <p3> Designed and coded by Adelina Hetman, 2022 </p3>
-    </div>
-  </div>
   </body>
 </html>
