construction of the page

--- a/homepage.html
+++ b/homepage.html
@@ -29,7 +29,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-light shadow-sm fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Adelina Hetman</a>
+        <a class="navbar-brand" href="/homepage.html">Adelina Hetman</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -61,35 +61,53 @@
         </div>
       </div>
     </nav>
-
-    <h1>Adelina Hetman</h1>
-    <h2>Front-end developer based in Europe</h2>
-    <h3>Welcome to my page! 😉</h3>
-    <div class="row">
-      <div class="col-sm-5">
-        <img
-          src="/Images/My photo.jpg"
-          class="img-fluid photo rounded-3 shadow-sm border-3"
-          alt="My photo"
-          title="Adelina Hetman photo" id="myPhoto"
-        />
-      </div>
-      <div class="col-sm-7">
-        <p>I'm from Kyiv, Ukraine</p>
-        <p1>I'm able to create sites using the next:</p1>
-        <ul>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>Boostrap</li>
-          <li>Responsive features</li>
-          <li>GitHub</li>
-          <li>Netlify (for hosting the projects)</li>
-        </ul>
-      </div>
+    <div class="container greeting mb-5">
+      <h1 class="mt-5 text-center">Adelina Hetman</h1>
+      <h2 class="m-4 text-center">Front-end developer based in Europe</h2>
+      <h3 class="m-4 text-center">Welcome to my page! 😉</h3>
     </div>
 
-    <div class="container text-center">
+      <div class="row">
+        <div class="col-sm-6">
+          <img
+            src="/Images/My photo.jpg"
+            class="img-fluid photo rounded-3 shadow-sm border-3"
+            alt="My photo"
+            title="Adelina Hetman photo"
+            id="myPhoto"
+          />
+        </div>
+        <div class="col-sm-6 ">
+        <div class="container list">
+          <p>I'm from Kyiv, Ukraine</p> 
+          <p1 class="mb-5">I'm able to create websites and landing pages using the next:</p1>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>Boostrap</li>
+            <li>Responsive features</li>
+            <li>GitHub</li>
+            <li>Netlify (for hosting the projects)</li>
+          </ul></div>
+           <div class="navigation-links homepagebuttoms">
+                <a
+                  href="/portfolio.html"
+                  class="primary-link"
+                  title="Portfolio page"
+                  > Portfolio </a
+                >
+                <a
+                  href="/portfolio.html#contact"
+                  class="secondary-link"
+                  title="Contact Adelina Hetman"
+                  >Contact </a
+                >
+              </div>
+        </div>
+      </div>
+    </div></div>
+    <div class="container text-center bottomLine">
       <p3> Designed and coded by Adelina Hetman, 2022 </p3>
     </div>
   </body>
