--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-light shadow-sm fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Adelina Hetman</a>
+        <a class="navbar-brand" href="/homepage.html">Adelina Hetman</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -65,29 +65,29 @@
         <h5 class="m-3 mb-5">Let's start...</h5>
         <div class="container mt-4">
           <div class="row">
-            <div class="col-sm-5">
+            <div class="col-sm-6">
               <h3 class="mb-5">Travelling page</h3>
               <p>
                 This is my first project where I've used JavaScript 👩🏻‍💻. It was
                 an interesting discovering. To see the results push the button
                 below.
               </p>
-              <div class="navigation-links mb-5">
+              <div class="navigation-links">
                 <a
                   href="https://aquamarine-treacle-1395c8.netlify.app/"
                   class="primary-link"
                   title="Travelling page"
-                  >To visit the page</a
+                  >See more</a
                 >
                 <a
                   href="/portfolio.html#contact"
                   class="secondary-link"
                   title="Contact Adelina Hetman"
-                  >Contact me</a
+                  >Contact</a
                 >
               </div>
             </div>
-            <div class="col-sm-7">
+            <div class="col-sm-6">
               <img
                 src="/Images/Travelling.png"
                 alt="Travelling photo"
@@ -111,7 +111,7 @@
             <div class="col-sm-7">
 <h3 class="mb-3">Weather Application</h3>
               <p>
-                In this project I've implemented API and perform Weather forecast for a week. There is an ability to convert the temperatureinto from C° to F° and vice versa. Here you can find max and min temperature during the day.</p>
+                In this project I've implemented API and perform Weather forecast for a week. There is an ability to convert the temperature into from C° to F° and vice versa. Here you can find max and min temperature during the day.</p>
                 <p>You can Enter any city to get the Weather forecast. The images are correspond to current weather. Also there is an actual time on the page.
               </p>
               <div class="navigation-links mb-5">
@@ -119,13 +119,13 @@
                   href="https://fluffy-cobbler-4d3053.netlify.app/"
                   class="primary-link"
                   title="Weather app"
-                  >Weather App</a
+                  >See more</a
                 >
                 <a
                   href="/portfolio.html#contact"
                   class="secondary-link"
                   title="Contact Adelina Hetman"
-                  >Contact me</a>
+                  >Contact</a>
               </div>
             </div>
             
@@ -156,7 +156,7 @@
           <a href="mailto: adelhetman@gmail.com"> adelhetman@gmail.com </a>
         </p2>
       </div>
-      <div class="container text-center">
+      <div class="container text-center bottomLine">
         <p3> Designed and coded by Adelina Hetman, 2022 </p3>
       </div>
     </div>
