--- a/homepage.html
+++ b/homepage.html
@@ -55,7 +55,7 @@
               <a class="nav-link" href="/portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact</a>
+              <a class="nav-link" href="/portfolio.html#contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -64,7 +64,7 @@
     <div class="container greeting mb-5">
       <h1 class="mt-5 text-center">Adelina Hetman</h1>
       <h2 class="m-4 text-center">Front-end developer based in Europe</h2>
-      <h3 class="m-4 text-center">Welcome to my page! 😉</h3>
+      <h3 class="m-4 text-center">Welcome to my page! <img src="/Images/icons8-anime-emoji-100.png" alt="smile" title="Smile icon" width="50"/></h3>
     </div>
 
       <div class="row">
