--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Adelina Hetman /Front-end developer/</title>
-    <meta
+        <meta
       name="description"
       content="Professional Front-end developer /Adelina Hetman/"
     />
@@ -66,10 +66,11 @@
         <div class="container mt-4">
           <div class="row">
             <div class="col-sm-6">
-              <h3 class="mb-5">Travelling page</h3>
-              <p>
-                This is my first project where I've used JavaScript 👩🏻‍💻. It was
-                an interesting discovering. To see the results push the button
+         <h3 class="mt-3 mb-4">Travelling page <img src="/Images/icons8-around-the-globe-50.png" alt="travelling" title="Travelling icon"/> </h3>
+            <p>
+                This is my first project where I've used not only HTML but JavaScript also.👩🏻‍💻 It was
+                an interesting discovering for me. 
+                The interaction with a website user is available here.  To see the results push the button
                 below.
               </p>
               <div class="navigation-links">
@@ -100,7 +101,7 @@
       </div>
       <div class="container mt-4">
           <div class="row">
-            <div class="col-sm-5">
+            <div class="col-sm-7">
               <img
                 src="/Images/Weather application,forecast.png"
                 alt="Travelling photo"
@@ -108,13 +109,40 @@
                 class="img-fluid rounded-3 shadow-sm border-3" width="900px"
               />
             </div>
-            <div class="col-sm-7">
-<h3 class="mb-3">Weather Application</h3>
+            <div class="col-sm-5">
+<h3 class="mt-3 mb-4">
+   Weather Application <img src="/Images/icons8-sun-50.png" alt="weather" title="Weather icon"/> </h3>
               <p>
-                In this project I've implemented API and perform Weather forecast for a week. There is an ability to convert the temperature into from C° to F° and vice versa. Here you can find max and min temperature during the day.</p>
+                One of my favourite projects.😊 In this project I've implemented API and perform Weather forecast for a week. There is an ability to convert the temperature into from C° to F° and vice versa. Here you can find max and min temperature during the day.</p>
                 <p>You can Enter any city to get the Weather forecast. The images are correspond to current weather. Also there is an actual time on the page.
               </p>
               <div class="navigation-links mb-5">
+                <a
+                  href="https://fluffy-cobbler-4d3053.netlify.app/"
+                  class="primary-link"
+                  title="Weather app"
+                  >See more</a><a
+                  href="/portfolio.html#contact"
+                  class="secondary-link"
+                  title="Contact Adelina Hetman"
+                  >Contact</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+      <div class="container">
+        <div class="row">
+        
+          <div class="col-sm-5">
+             <h3 class="mt-3 mb-4"> Weather Application with geolocation and current  <img src="/Images/icons8-address-50.png" alt="location" title="Location icon"/></h3>
+          <p>It was my first project where I've implemented such features as the navigation and real-time. So you can push the button to get the weather conditions at your current place or type the city name in the search form.</p>
+          <p>And also current time and day of week are displayed here. I've built animation gifs here.
+          </p></p>
+          <div class="navigation-links mb-5">
                 <a
                   href="https://fluffy-cobbler-4d3053.netlify.app/"
                   class="primary-link"
@@ -126,33 +154,18 @@
                   class="secondary-link"
                   title="Contact Adelina Hetman"
                   >Contact</a>
-              </div>
-            </div>
-            
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-7">
+              </div></div>  <div class="col-sm-7">
             <img
-              src="/Images/Photography.png"
-              alt="photography"
-              title="Architectual photography"
+              src="/Images/Weather app 1-st.png"
+              alt="Weather ap with geolocation"
+              title="Weather app with geolocation"
               class="img-fluid rounded-3 shadow-sm border-3"
             />
           </div>
-          <div class="col-sm-5">
-            <p>I am fond of Architectual photography.</p>
-          </div>
-        </div>
-      </div>
+      </div></div>
       <div class="container">
         <p2 class="m-5" id="contact">
-          📩 Contact me
+          <img src="/Images/icons8-mail-100.png" alt="mail" title="Contact me" width="50"/> Contact me
           <a href="mailto: adelhetman@gmail.com"> adelhetman@gmail.com </a>
         </p2>
       </div>
