added @media for small resolution

--- a/homepage.html
+++ b/homepage.html
@@ -80,7 +80,7 @@
         <div class="col-sm-6 ">
         <div class="container list">
           <p>I'm from Kyiv, Ukraine</p> 
-          <p1 class="mb-5">I'm able to create websites and landing pages using the next:</p1>
+          <p1 class="mb-5">I like to design and create websites and landing pages! In my work I use the next:</p1>
           <ul>
             <li>HTML</li>
             <li>CSS</li>
