--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
       src="https://kit.fontawesome.com/ce18d120fc.js"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <title>Adelina Hetman - Portfolio </title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -53,7 +53,7 @@
               <a class="nav-link active" href="/">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact</a>
+              <a class="nav-link" href="/portfolio.html#contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -73,7 +73,7 @@
                 The interaction with a website user is available here.  To see the results push the button
                 below.
               </p>
-              <div class="navigation-links">
+              <div class="navigation-links mb-5">
                 <a
                   href="https://aquamarine-treacle-1395c8.netlify.app/"
                   class="primary-link"
@@ -144,11 +144,10 @@
           </p></p>
           <div class="navigation-links mb-5">
                 <a
-                  href="https://fluffy-cobbler-4d3053.netlify.app/"
+                  href="https://fastidious-smakager-ddfb0a.netlify.app/"
                   class="primary-link"
                   title="Weather app"
-                  >See more</a
-                >
+                  >See more</a>
                 <a
                   href="/portfolio.html#contact"
                   class="secondary-link"
@@ -157,14 +156,14 @@
               </div></div>  <div class="col-sm-7">
             <img
               src="/Images/Weather app 1-st.png"
-              alt="Weather ap with geolocation"
+              alt="Weather app with geolocation"
               title="Weather app with geolocation"
               class="img-fluid rounded-3 shadow-sm border-3"
             />
           </div>
       </div></div>
-      <div class="container">
-        <p2 class="m-5" id="contact">
+      <div class="container mt-5">
+        <p2 id="contact">
           <img src="/Images/icons8-mail-100.png" alt="mail" title="Contact me" width="50"/> Contact me
           <a href="mailto: adelhetman@gmail.com"> adelhetman@gmail.com </a>
         </p2>
