--- a/homepage.html
+++ b/homepage.html
@@ -27,9 +27,10 @@
     ></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-light shadow-sm fixed-top">
+    <div class="container">
+    <nav class="navbar navbar-expand-sm bg-light shadow-sm fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/homepage.html">Adelina Hetman</a>
+        <a class="navbar-brand me-5" href="/homepage.html">Adelina Hetman</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -61,6 +62,7 @@
         </div>
       </div>
     </nav>
+  </div>
     <div class="container greeting mb-5">
       <h1 class="mt-5 text-center">Adelina Hetman</h1>
       <h2 class="m-4 text-center">Front-end developer based in Europe</h2>
