--- a/portfolio.html
+++ b/portfolio.html
@@ -28,9 +28,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-light shadow-sm fixed-top">
+    <div class="container">
+    <nav class="navbar navbar-expand-sm bg-light shadow-sm fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/homepage.html">Adelina Hetman</a>
+        <a class="navbar-brand me-5" href="/homepage.html">Adelina Hetman</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -59,6 +60,7 @@
         </div>
       </div>
     </nav>
+  </div>
     <div class="container allProjects">
       <div class="container mb-5 portfolio">
         <h2 class="text-center mb-4">Portfolio</h2>
@@ -66,7 +68,7 @@
         <div class="container mt-4">
           <div class="row">
             <div class="col-sm-6">
-         <h3 class="mt-3 mb-4">Travelling page <img src="/Images/icons8-around-the-globe-50.png" alt="travelling" title="Travelling icon"/> </h3>
+         <h3 class="mt-3 mb-4"><img src="/Images/icons8-around-the-globe-50.png" alt="travelling" title="Travelling icon"/>Travelling page  </h3>
             <p>
                 This is my first project where I've used not only HTML but JavaScript also.👩🏻‍💻 It was
                 an interesting discovering for me. 
@@ -77,15 +79,11 @@
                 <a
                   href="https://aquamarine-treacle-1395c8.netlify.app/"
                   class="primary-link"
-                  title="Travelling page"
-                  >See more</a
-                >
+                  title="Travelling page">See more</a>
                 <a
                   href="/portfolio.html#contact"
                   class="secondary-link"
-                  title="Contact Adelina Hetman"
-                  >Contact</a
-                >
+                  title="Contact Adelina Hetman">Contact</a>
               </div>
             </div>
             <div class="col-sm-6">
@@ -98,11 +96,12 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="container mt-4">
+          <div class="container mt-4">
           <div class="row">
             <div class="col-sm-7">
-              <img
+             <h3 class="mt-3 mb-4">
+         <img src="/Images/icons8-sun-50.png" alt="weather" title="Weather icon"/> Weather Application </h3>
+         <img
                 src="/Images/Weather application,forecast.png"
                 alt="Travelling photo"
                 title="Weaher App"
@@ -110,9 +109,7 @@
               />
             </div>
             <div class="col-sm-5">
-<h3 class="mt-3 mb-4">
-   Weather Application <img src="/Images/icons8-sun-50.png" alt="weather" title="Weather icon"/> </h3>
-              <p>
+             <p class="mt-4">
                 One of my favourite projects.😊 In this project I've implemented API and perform Weather forecast for a week. There is an ability to convert the temperature into from C° to F° and vice versa. Here you can find max and min temperature during the day.</p>
                 <p>You can Enter any city to get the Weather forecast. The images are correspond to current weather. Also there is an actual time on the page.
               </p>
@@ -128,16 +125,10 @@
                   >Contact</a>
               </div>
             </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-      <div class="container">
+                  
+      <div class="container mt-4">
         <div class="row">
-        
-          <div class="col-sm-5">
+         <div class="col-sm-5">
              <h3 class="mt-3 mb-4"> Weather Application with geolocation and current  <img src="/Images/icons8-address-50.png" alt="location" title="Location icon"/></h3>
           <p>It was my first project where I've implemented such features as the navigation and real-time. So you can push the button to get the weather conditions at your current place or type the city name in the search form.</p>
           <p>And also current time and day of week are displayed here. I've built animation gifs here.
@@ -153,7 +144,8 @@
                   class="secondary-link"
                   title="Contact Adelina Hetman"
                   >Contact</a>
-              </div></div>  <div class="col-sm-7">
+              </div></div> 
+             <div class="col-sm-7">
             <img
               src="/Images/Weather app 1-st.png"
               alt="Weather app with geolocation"
@@ -161,10 +153,14 @@
               class="img-fluid rounded-3 shadow-sm border-3"
             />
           </div>
-      </div></div>
+      </div>
+    </div>
+      </div>
+    </div>
+    </div>   
       <div class="container mt-5">
-        <p2 id="contact">
-          <img src="/Images/icons8-mail-100.png" alt="mail" title="Contact me" width="50"/> Contact me
+        <p2 id="contact" class="contactLink">
+          <img src="/Images/icons8-mail-100.png" class="contactLink" alt="mail" title="Contact me" width="50"/> Contact me
           <a href="mailto: adelhetman@gmail.com"> adelhetman@gmail.com </a>
         </p2>
       </div>
