added some details to code

--- a/homepage.html
+++ b/homepage.html
@@ -68,9 +68,8 @@
       <h2 class="m-4 text-center">Front-end developer based in Europe</h2>
       <h3 class="m-4 text-center">Welcome to my page! <img src="/Images/icons8-anime-emoji-100.png" alt="smile" title="Smile icon" width="50"/></h3>
     </div>
-
       <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-5">
           <img
             src="/Images/My photo.jpg"
             class="img-fluid photo rounded-3 shadow-sm border-3"
@@ -79,10 +78,11 @@
             id="myPhoto"
           />
         </div>
-        <div class="col-sm-6 ">
+        <div class="col-sm-7 ">
         <div class="container list">
           <p>I'm from Kyiv, Ukraine</p> 
-          <p1 class="mb-5">I like to design and create websites and landing pages! In my work I use the next:</p1>
+          <p1 class="mb-4 ms-5">I like to design and create websites and landing pages!</p1>
+          <p class="mt-2"> In my work I use the next:</p>
           <ul>
             <li>HTML</li>
             <li>CSS</li>
