--- a/homepage.html
+++ b/homepage.html
@@ -48,15 +48,15 @@
               <a
                 class="nav-link active"
                 aria-current="page"
-                href="/homepage.html"
+                href="homepage.html"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/portfolio.html">Portfolio</a>
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/portfolio.html#contact">Contact</a>
+              <a class="nav-link" href="portfolio.html#contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -66,12 +66,12 @@
     <div class="container greeting mb-5">
       <h1 class="mt-5 text-center">Adelina Hetman</h1>
       <h2 class="m-4 text-center">Front-end developer based in Europe</h2>
-      <h3 class="m-4 text-center">Welcome to my page! <img src="/Images/icons8-anime-emoji-100.png" alt="smile" title="Smile icon" width="50"/></h3>
+      <h3 class="m-4 text-center">Welcome to my page! <img src="Images/icons8-anime-emoji-100.png" alt="smile" title="Smile icon" width="50"/></h3>
     </div>
       <div class="row">
         <div class="col-sm-5">
           <img
-            src="/Images/My photo.jpg"
+            src="Images/My photo.jpg"
             class="img-fluid photo rounded-3 shadow-sm border-3"
             alt="My photo"
             title="Adelina Hetman photo"
@@ -94,13 +94,13 @@
           </ul></div>
            <div class="navigation-links homepagebuttoms">
                 <a
-                  href="/portfolio.html"
+                  href="portfolio.html"
                   class="primary-link"
                   title="Portfolio page"
                   > Portfolio </a
                 >
                 <a
-                  href="/portfolio.html#contact"
+                  href="portfolio.html#contact"
                   class="secondary-link"
                   title="Contact Adelina Hetman"
                   >Contact </a
