--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
     <div class="container">
     <nav class="navbar navbar-expand-sm bg-light shadow-sm fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand me-5" href="/homepage.html">Adelina Hetman</a>
+        <a class="navbar-brand me-5" href="homepage.html">Adelina Hetman</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -46,15 +46,15 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/homepage.html"
+              <a class="nav-link" aria-current="page" href="homepage.html"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/">Portfolio</a>
+              <a class="nav-link active" href="#">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/portfolio.html#contact">Contact</a>
+              <a class="nav-link" href="portfolio.html#contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -68,7 +68,7 @@
         <div class="container mt-4">
           <div class="row">
             <div class="col-sm-6">
-         <h3 class="mt-3 mb-4"><img src="/Images/icons8-around-the-globe-50.png" alt="travelling" title="Travelling icon"/>Travelling page  </h3>
+         <h3 class="mt-3 mb-4"><img src="Images/icons8-around-the-globe-50.png" alt="travelling" title="Travelling icon"/>Travelling page  </h3>
             <p>
                 This is my first project where I've used not only HTML but JavaScript also.👩🏻‍💻 It was
                 an interesting discovering for me. 
@@ -81,14 +81,14 @@
                   class="primary-link"
                   title="Travelling page">See more</a>
                 <a
-                  href="/portfolio.html#contact"
+                  href="portfolio.html#contact"
                   class="secondary-link"
                   title="Contact Adelina Hetman">Contact</a>
               </div>
             </div>
             <div class="col-sm-6">
               <img
-                src="/Images/Travelling.png"
+                src="Images/Travelling.png"
                 alt="Travelling photo"
                 title="Carpathians"
                 class="img-fluid rounded-3 shadow-sm border-3" width="300px"
@@ -100,9 +100,9 @@
           <div class="row">
             <div class="col-sm-7">
              <h3 class="mt-3 mb-4">
-         <img src="/Images/icons8-sun-50.png" alt="weather" title="Weather icon"/> Weather Application </h3>
+         <img src="Images/icons8-sun-50.png" alt="weather" title="Weather icon"/> Weather Application </h3>
          <img
-                src="/Images/Weather application,forecast.png"
+                src="Images/Weather application,forecast.png"
                 alt="Travelling photo"
                 title="Weaher App"
                 class="img-fluid rounded-3 shadow-sm border-3" width="900px"
@@ -119,7 +119,7 @@
                   class="primary-link"
                   title="Weather app"
                   >See more</a><a
-                  href="/portfolio.html#contact"
+                  href="portfolio.html#contact"
                   class="secondary-link"
                   title="Contact Adelina Hetman"
                   >Contact</a>
@@ -129,7 +129,7 @@
       <div class="container mt-4">
         <div class="row">
          <div class="col-sm-5">
-             <h3 class="mt-3 mb-4"> Weather Application with geolocation and current  <img src="/Images/icons8-address-50.png" alt="location" title="Location icon"/></h3>
+             <h3 class="mt-3 mb-4"> Weather Application with geolocation and current  <img src="Images/icons8-address-50.png" alt="location" title="Location icon"/></h3>
           <p>It was my first project where I've implemented such features as the navigation and real-time. So you can push the button to get the weather conditions at your current place or type the city name in the search form.</p>
           <p>And also current time and day of week are displayed here. I've built animation gifs here.
           </p></p>
@@ -140,14 +140,14 @@
                   title="Weather app"
                   >See more</a>
                 <a
-                  href="/portfolio.html#contact"
+                  href="portfolio.html#contact"
                   class="secondary-link"
                   title="Contact Adelina Hetman"
                   >Contact</a>
               </div></div> 
              <div class="col-sm-7">
             <img
-              src="/Images/Weather app 1-st.png"
+              src="Images/Weather app 1-st.png"
               alt="Weather app with geolocation"
               title="Weather app with geolocation"
               class="img-fluid rounded-3 shadow-sm border-3"
@@ -160,7 +160,7 @@
     </div>   
       <div class="container mt-5">
         <p2 id="contact" class="contactLink">
-          <img src="/Images/icons8-mail-100.png" class="contactLink" alt="mail" title="Contact me" width="50"/> Contact me
+          <img src="Images/icons8-mail-100.png" class="contactLink" alt="mail" title="Contact me" width="50"/> Contact me
           <a href="mailto: adelhetman@gmail.com"> adelhetman@gmail.com </a>
         </p2>
       </div>
