changed a name of the main html file

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="container">
     <nav class="navbar navbar-expand-sm bg-light shadow-sm fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand me-5" href="/homepage.html">Adelina Hetman</a>
+        <a class="navbar-brand me-5" href="/index.html">Adelina Hetman</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -48,7 +48,7 @@
               <a
                 class="nav-link active"
                 aria-current="page"
-                href="homepage.html"
+                href="index.html"
                 >Home</a
               >
             </li>
