--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
     <div class="container">
     <nav class="navbar navbar-expand-sm bg-light shadow-sm fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand me-5" href="homepage.html">Adelina Hetman</a>
+        <a class="navbar-brand me-5" href="index.html">Adelina Hetman</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -46,7 +46,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="homepage.html"
+              <a class="nav-link" aria-current="page" href="index.html"
                 >Home</a
               >
             </li>
