--- a/index.html
+++ b/index.html
@@ -21,12 +21,10 @@
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
-    <script
-      src="https://kit.fontawesome.com/ce18d120fc.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC:wght@400;700;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+ <body>
     <div class="container">
     <nav class="navbar navbar-expand-sm bg-light shadow-sm fixed-top">
       <div class="container-fluid">
