--- a/portfolio.html
+++ b/portfolio.html
@@ -20,10 +20,9 @@
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
-    <script
-      src="https://kit.fontawesome.com/ce18d120fc.js"
-      crossorigin="anonymous"
-    ></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC:wght@400;700;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <title>Adelina Hetman - Portfolio </title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -158,10 +157,10 @@
       </div>
     </div>
     </div>   
-      <div class="container mt-5">
-        <p2 id="contact" class="contactLink">
-          <img src="Images/icons8-mail-100.png" class="contactLink" alt="mail" title="Contact me" width="50"/> Contact me
-          <a href="mailto: adelhetman@gmail.com"> adelhetman@gmail.com </a>
+      <div class="container mt-5 contactLink">
+        <img src="Images/icons8-mail-100.png" alt="mail" title="Contact me" width="50"/>
+        <p2 id="contact">  Contact me
+         <a href="mailto: adelhetman@gmail.com"> adelhetman@gmail.com </a>
         </p2>
       </div>
       <div class="container text-center bottomLine">
