--- a/portfolio.html
+++ b/portfolio.html
@@ -128,7 +128,9 @@
       <div class="container mt-4">
         <div class="row">
          <div class="col-sm-5">
-             <h3 class="mt-3 mb-4">  <img src="Images/icons8-address-50.png" alt="location" title="Location icon"/>Weather Application with geolocation and current </h3>
+             <h3 class="mt-3 mb-4">  
+              <img src="Images/icons8-address-50.png" alt="location" title="Location icon"/>
+              Weather Application with geolocation and current time </h3>
           <p>It was my first project where I've implemented such features as the navigation and real-time. So you can push the button to get the weather conditions at your current place or type the city name in the search form.</p>
           <p>And also current time and day of week are displayed here. I've built animation gifs here.
           </p></p>
