added the contact button

--- a/portfolio.html
+++ b/portfolio.html
@@ -159,15 +159,32 @@
       </div>
     </div>
     </div>   
+    <footer>
+       <div class="container contact-box ">
+        <div class="row">
+          <div class="col-ms-6 ">
+       <h3>
+        Work Enquiry
+       </h3>
+       <p>
+        Let's work together and I'll help you by all my best
+      </p>
+    </div>
+      <div class="col-ms-6">
+      <button class="btn shadow-sm">Let's talk here</button>
+    </div>
+      </div>
+       </footer>
+
       <div class="container mt-5 contactLink">
         <img src="Images/icons8-mail-100.png" alt="mail" title="Contact me" width="50"/>
         <p2 id="contact">  Contact me
          <a href="mailto: adelhetman@gmail.com"> adelhetman@gmail.com </a>
         </p2>
       </div>
-      <div class="container text-center bottomLine">
+     </div>
+      <div class="container bottomLine">
         <p3> Designed and coded by Adelina Hetman, 2022 </p3>
       </div>
-    </div>
   </body>
 </html>
