Work with design details

--- a/portfolio.html
+++ b/portfolio.html
@@ -64,17 +64,17 @@
       <div class="container mb-5 portfolio">
         <h2 class="text-center mb-4">Portfolio</h2>
         <h5 class="m-3 mb-5">Let's start...</h5>
-        <div class="container mt-4">
+        <div class="container mt-sm-4">
           <div class="row">
             <div class="col-sm-6">
-         <h3 class="mt-3 mb-4"><img src="Images/icons8-around-the-globe-50.png" alt="travelling" title="Travelling icon"/>Travelling page  </h3>
+         <h3 class="mt-sm-5 mb-sm-5"><img src="Images/icons8-around-the-globe-50.png" alt="travelling" class="icons" title="Travelling icon"/>Travelling page  </h3>
             <p>
                 This is my first project where I've used not only HTML but JavaScript also.👩🏻‍💻 It was
                 an interesting discovering for me. 
                 The interaction with a website user is available here.  To see the results push the button
                 below.
               </p>
-              <div class="navigation-links mb-5">
+              <div class="navigation-links mb-sm-5">
                 <a
                   href="https://aquamarine-treacle-1395c8.netlify.app/"
                   class="primary-link"
@@ -95,11 +95,11 @@
             </div>
           </div>
         </div>
-          <div class="container mt-4">
+          <div class="container mt-sm-5">
           <div class="row">
             <div class="col-sm-7">
-             <h3 class="mt-3 mb-4">
-         <img src="Images/icons8-sun-50.png" alt="weather" title="Weather icon"/> Weather Application </h3>
+             <h3 class="mb-sm-4">
+         <img src="Images/icons8-sun-50.png" alt="weather" title="Weather icon" class="icons"/> Weather Application </h3>
          <img
                 src="Images/Weather application,forecast.png"
                 alt="Travelling photo"
@@ -108,11 +108,11 @@
               />
             </div>
             <div class="col-sm-5">
-             <p class="mt-4">
+             <p class="mt-sm-5">
                 One of my favourite projects.😊 In this project I've implemented API and perform Weather forecast for a week. There is an ability to convert the temperature into from C° to F° and vice versa. Here you can find max and min temperature during the day.</p>
                 <p>You can Enter any city to get the Weather forecast. The images are correspond to current weather. Also there is an actual time on the page.
               </p>
-              <div class="navigation-links mb-5">
+              <div class="navigation-links mb-sm-3">
                 <a
                   href="https://fluffy-cobbler-4d3053.netlify.app/"
                   class="primary-link"
@@ -125,16 +125,16 @@
               </div>
             </div>
                   
-      <div class="container mt-4">
+      <div class="container mt-sm-4">
         <div class="row">
-         <div class="col-sm-5">
-             <h3 class="mt-3 mb-4">  
-              <img src="Images/icons8-address-50.png" alt="location" title="Location icon"/>
+         <div class="col-sm-6">
+             <h3 class="mb-sm-4">  
+              <img src="Images/icons8-address-50.png" alt="location" title="Location icon" class="icons"/>
               Weather Application with geolocation and current time </h3>
           <p>It was my first project where I've implemented such features as the navigation and real-time. So you can push the button to get the weather conditions at your current place or type the city name in the search form.</p>
           <p>And also current time and day of week are displayed here. I've built animation gifs here.
           </p></p>
-          <div class="navigation-links mb-5">
+          <div class="navigation-links mb-sm-5">
                 <a
                   href="https://fastidious-smakager-ddfb0a.netlify.app/"
                   class="primary-link"
@@ -146,7 +146,7 @@
                   title="Contact Adelina Hetman"
                   >Contact</a>
               </div></div> 
-             <div class="col-sm-7">
+             <div class="col-sm-6">
             <img
               src="Images/Weather app 1-st.png"
               alt="Weather app with geolocation"
@@ -160,22 +160,20 @@
     </div>
     </div>   
     <footer>
-       <div class="container contact-box ">
-        <div class="row">
-          <div class="col-ms-6 ">
+       <div class="container contact-box d-flex justify-content-between">
+        <div class="container">
        <h3>
         Work Enquiry
        </h3>
-       <p>
+      <p class="text-muted mt-sm-3">
         Let's work together and I'll help you by all my best
       </p>
     </div>
-      <div class="col-ms-6">
-      <button class="btn shadow-sm">Let's talk here</button>
+    <div class="container btn-box text-center">
+      <a href="" class="btn primary-link">Let's talk here</a>
     </div>
-      </div>
-       </footer>
-
+  </div>
+     </footer>
       <div class="container mt-5 contactLink">
         <img src="Images/icons8-mail-100.png" alt="mail" title="Contact me" width="50"/>
         <p2 id="contact">  Contact me
