improved the code

--- a/portfolio.html
+++ b/portfolio.html
@@ -159,7 +159,7 @@
       </div>
     </div>
     </div>   
-    <footer>
+    <footer class="d-none d-md-block">
        <div class="container contact-box d-flex justify-content-between">
         <div class="container">
        <h3>
@@ -168,11 +168,11 @@
       <p class="text-muted mt-sm-3">
         Let's work together and I'll help you by all my best
       </p>
-    </div>
+      </div>
     <div class="container btn-box text-center">
-      <a href="" class="btn primary-link">Let's talk here</a>
+      <a href="mailto: adelhetman@gmail.com" class="btn primary-link">Let's talk here</a>
     </div>
-  </div>
+  </div></div>
      </footer>
       <div class="container mt-5 contactLink">
         <img src="Images/icons8-mail-100.png" alt="mail" title="Contact me" width="50"/>
