--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Adelina Hetman - Front-end developer</title>
     <meta
       name="description"
-      content="Professional Front-end developer /Adelina Hetman/"
+      content="Adelina Hetman is a Front-end developer based in Europe"
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -46,9 +46,7 @@
               <a
                 class="nav-link active"
                 aria-current="page"
-                href="index.html"
-                >Home</a
-              >
+                href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="portfolio.html">Portfolio</a>
@@ -94,15 +92,11 @@
                 <a
                   href="portfolio.html"
                   class="primary-link"
-                  title="Portfolio page"
-                  > Portfolio </a
-                >
+                  title="Portfolio page"> Portfolio </a>
                 <a
                   href="portfolio.html#contact"
                   class="secondary-link"
-                  title="Contact Adelina Hetman"
-                  >Contact </a
-                >
+                  title="Contact Adelina Hetman">Contact </a>
               </div>
         </div>
       </div>
