--- a/portfolio.html
+++ b/portfolio.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Adelina Hetman /Front-end developer/</title>
+    <title>Adelina Hetman - Front-end developer, Portfolio</title>
         <meta
       name="description"
-      content="Professional Front-end developer /Adelina Hetman/"
+      content="Adelina Hetman is a Front-end developer based in Europe"
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -23,16 +23,15 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC:wght@400;700;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <title>Adelina Hetman - Portfolio </title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
     <nav class="navbar navbar-expand-sm bg-light shadow-sm fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand me-5" href="index.html">Adelina Hetman</a>
+        <a class="navbar-brand" href="index.html">Adelina Hetman</a>
         <button
-          class="navbar-toggler"
+          class="navbar-toggler me-3"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarNav"
@@ -45,9 +44,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html"
-                >Home</a
-              >
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="#">Portfolio</a>
@@ -67,7 +64,7 @@
         <div class="container mt-sm-4">
           <div class="row">
             <div class="col-sm-6">
-         <h3 class="mt-sm-5 mb-sm-5"><img src="Images/icons8-around-the-globe-50.png" alt="travelling" class="icons" title="Travelling icon"/>Travelling page  </h3>
+         <h3 class="mt-sm-5 mb-sm-5"><img src="Images/icons8-around-the-globe-50.png" alt="travelling" class="icons" title="Travelling icon"/>Travelling page</h3>
             <p>
                 This is my first project where I've used not only HTML but JavaScript also.👩🏻‍💻 It was
                 an interesting discovering for me. 
@@ -170,14 +167,14 @@
       </p>
       </div>
     <div class="container btn-box text-center">
-      <a href="mailto: adelhetman@gmail.com" class="btn primary-link">Let's talk here</a>
+      <a href="mailto: adelhetman@gmail.com" class="btn primary-link" title="Contact Adelina Hetman">Let's talk here</a>
     </div>
   </div></div>
      </footer>
       <div class="container mt-5 contactLink">
         <img src="Images/icons8-mail-100.png" alt="mail" title="Contact me" width="50"/>
         <p2 id="contact">  Contact me
-         <a href="mailto: adelhetman@gmail.com"> adelhetman@gmail.com </a>
+         <a href="mailto: adelhetman@gmail.com" title="Contact Adelina Hetman"> adelhetman@gmail.com </a>
         </p2>
       </div>
      </div>
