changed the 3-rd project

--- a/portfolio.html
+++ b/portfolio.html
@@ -126,16 +126,16 @@
         <div class="row">
          <div class="col-sm-6">
              <h3 class="mb-sm-4">  
-              <img src="Images/icons8-address-50.png" alt="location" title="Location icon" class="icons"/>
-              Weather Application with geolocation and current time </h3>
+              <img src="Images/Photographer_page.jpg" alt="Photographer's page pic" title="Photographer's page" class="icons"/>
+              Photographer page </h3>
           <p>It was my first project where I've implemented such features as the navigation and real-time. So you can push the button to get the weather conditions at your current place or type the city name in the search form.</p>
           <p>And also current time and day of week are displayed here. I've built animation gifs here.
           </p></p>
           <div class="navigation-links mb-sm-5">
                 <a
-                  href="https://fastidious-smakager-ddfb0a.netlify.app/"
+                  href="https://inspiring-pony-73f706.netlify.app/"
                   class="primary-link"
-                  title="Weather app"
+                  title="Photographer's page"
                   >See more</a>
                 <a
                   href="portfolio.html#contact"
@@ -144,11 +144,9 @@
                   >Contact</a>
               </div></div> 
              <div class="col-sm-6">
-            <img
-              src="Images/Weather app 1-st.png"
-              alt="Weather app with geolocation"
-              title="Weather app with geolocation"
-              class="img-fluid rounded-3 shadow-sm border-3"
+            <img src="Images/Photographer_page.jpg" alt="Photographer's page pic" title="Photographer's page" class="img-fluid rounded-3 shadow-sm border-3"/>
+             
+              
             />
           </div>
       </div>
