added 3rd pfoject

--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,9 @@
         <div class="container mt-sm-4">
           <div class="row">
             <div class="col-sm-6">
-         <h3 class="mt-sm-5 mb-sm-5"><img src="Images/icons8-around-the-globe-50.png" alt="travelling" class="icons" title="Travelling icon"/>Travelling page</h3>
+         <h3 class="mt-sm-5 mb-sm-5">
+          <img src="Images/icons8-around-the-globe-50.png" alt="travelling" class="icons" title="Travelling icon"/>
+          Travelling page</h3>
             <p>
                 This is my first project where I've used not only HTML but JavaScript also.👩🏻‍💻 It was
                 an interesting discovering for me. 
@@ -106,7 +108,7 @@
             </div>
             <div class="col-sm-5">
              <p class="mt-sm-5">
-                One of my favourite projects.😊 In this project I've implemented API and perform Weather forecast for a week. There is an ability to convert the temperature into from C° to F° and vice versa. Here you can find max and min temperature during the day.</p>
+                One of my favourite projects.😊 In this project I've implemented API and performed Weather forecast for a week. There is an ability to convert the temperature into from C° to F° and vice versa. Here you can find max and min temperature during the day.</p>
                 <p>You can Enter any city to get the Weather forecast. The images are correspond to current weather. Also there is an actual time on the page.
               </p>
               <div class="navigation-links mb-sm-3">
@@ -126,11 +128,11 @@
         <div class="row">
          <div class="col-sm-6">
              <h3 class="mb-sm-4">  
-              <img src="Images/Photographer_page.jpg" alt="Photographer's page pic" title="Photographer's page" class="icons"/>
-              Photographer page </h3>
-          <p>It was my first project where I've implemented such features as the navigation and real-time. So you can push the button to get the weather conditions at your current place or type the city name in the search form.</p>
-          <p>And also current time and day of week are displayed here. I've built animation gifs here.
-          </p></p>
+              <img src="Images/icons8-camera-100.png" alt="Photographer's page pic" title="Photographer's page" class="icons"/>
+              Photographer's page </h3>
+          <p>I also like to take photos, especially Architecture. So on this page you can see some examples of my photography works. </p>
+          <p> As a Front-end developer I've perfomed the page using the navigation links, grids, Bootstrap instruments and other developer tools. </p> 
+          <p>Welcome to my page 😉 </p>
           <div class="navigation-links mb-sm-5">
                 <a
                   href="https://inspiring-pony-73f706.netlify.app/"
@@ -142,13 +144,11 @@
                   class="secondary-link"
                   title="Contact Adelina Hetman"
                   >Contact</a>
-              </div></div> 
+              </div>
+            </div> 
              <div class="col-sm-6">
             <img src="Images/Photographer_page.jpg" alt="Photographer's page pic" title="Photographer's page" class="img-fluid rounded-3 shadow-sm border-3"/>
-             
-              
-            />
-          </div>
+            </div>
       </div>
     </div>
       </div>
