--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container">
     <nav class="navbar navbar-expand-sm bg-light shadow-sm fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand me-5" href="/index.html">Adelina Hetman</a>
+        <a class="navbar-brand me-sm-5" href="/index.html">Adelina Hetman</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -41,7 +41,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav ms-sm-5">
             <li class="nav-item">
               <a
                 class="nav-link active"
