--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
     <div class="container">
     <nav class="navbar navbar-expand-sm bg-light shadow-sm fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Adelina Hetman</a>
+        <a class="navbar-brand me-sm-5" href="index.html">Adelina Hetman</a>
         <button
           class="navbar-toggler me-3"
           type="button"
@@ -42,7 +42,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav ms-sm-5">
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
@@ -58,22 +58,30 @@
     </nav>
   </div>
     <div class="container allProjects">
-      <div class="container mb-5 portfolio">
+      <div class="container mb-3 portfolio">
         <h2 class="text-center mb-4">Portfolio</h2>
         <h5 class="m-3 mb-5">Let's start...</h5>
         <div class="container mt-sm-4">
           <div class="row">
             <div class="col-sm-6">
          <h3 class="mt-sm-5 mb-sm-5">
-          <img src="Images/icons8-around-the-globe-50.png" alt="travelling" class="icons" title="Travelling icon"/>
+          <img src="Images/icons8-world-map-100.png" alt="travelling pic" class="icons" title="Travelling icon"/>
           Travelling page</h3>
             <p>
                 This is my first project where I've used not only HTML but JavaScript also.👩🏻‍💻 It was
                 an interesting discovering for me. 
                 The interaction with a website user is available here.  To see the results push the button
                 below.
-              </p>
-              <div class="navigation-links mb-sm-5">
+             </p>
+            </div>
+            <div class="col-sm-6">
+              <img
+                src="Images/Travelling.png"
+                alt="Travelling photo"
+                title="Carpathians"
+                class="img-fluid rounded-3 shadow-sm border-3" width="300px"
+              />   
+          <div class="navigation-links mb-sm-5">
                 <a
                   href="https://aquamarine-treacle-1395c8.netlify.app/"
                   class="primary-link"
@@ -83,17 +91,9 @@
                   class="secondary-link"
                   title="Contact Adelina Hetman">Contact</a>
               </div>
-            </div>
-            <div class="col-sm-6">
-              <img
-                src="Images/Travelling.png"
-                alt="Travelling photo"
-                title="Carpathians"
-                class="img-fluid rounded-3 shadow-sm border-3" width="300px"
-              />
-            </div>
-          </div>
         </div>
+       </div> 
+       </div>
           <div class="container mt-sm-5">
           <div class="row">
             <div class="col-sm-7">
@@ -102,7 +102,7 @@
          <img
                 src="Images/Weather application,forecast.png"
                 alt="Travelling photo"
-                title="Weaher App"
+                title="Weather App"
                 class="img-fluid rounded-3 shadow-sm border-3" width="900px"
               />
             </div>
@@ -133,7 +133,11 @@
           <p>I also like to take photos, especially Architecture. So on this page you can see some examples of my photography works. </p>
           <p> As a Front-end developer I've perfomed the page using the navigation links, grids, Bootstrap instruments and other developer tools. </p> 
           <p>Welcome to my page 😉 </p>
-          <div class="navigation-links mb-sm-5">
+          </div> 
+             <div class="col-sm-6">
+            <img src="Images/Photographer_page.jpg" alt="Photographer's page pic" title="Photographer's page" class="img-fluid rounded-3 shadow-sm border-3"/>
+           
+            <div class="navigation-links mb-sm-2">
                 <a
                   href="https://inspiring-pony-73f706.netlify.app/"
                   class="primary-link"
@@ -145,10 +149,7 @@
                   title="Contact Adelina Hetman"
                   >Contact</a>
               </div>
-            </div> 
-             <div class="col-sm-6">
-            <img src="Images/Photographer_page.jpg" alt="Photographer's page pic" title="Photographer's page" class="img-fluid rounded-3 shadow-sm border-3"/>
-            </div>
+             </div>
       </div>
     </div>
       </div>
@@ -169,7 +170,7 @@
     </div>
   </div></div>
      </footer>
-      <div class="container mt-5 contactLink">
+      <div class="container contactLink">
         <img src="Images/icons8-mail-100.png" alt="mail" title="Contact me" width="50"/>
         <p2 id="contact">  Contact me
          <a href="mailto: adelhetman@gmail.com" title="Contact Adelina Hetman"> adelhetman@gmail.com </a>
