--- a/portfolio.html
+++ b/portfolio.html
@@ -101,7 +101,7 @@
          <img src="Images/icons8-sun-50.png" alt="weather" title="Weather icon" class="icons"/> Weather Application </h3>
          <img
                 src="Images/Weather application,forecast.png"
-                alt="Travelling photo"
+                alt="Weather"
                 title="Weather App"
                 class="img-fluid rounded-3 shadow-sm border-3" width="900px"
               />
@@ -123,12 +123,11 @@
                   >Contact</a>
               </div>
             </div>
-                  
       <div class="container mt-sm-4">
         <div class="row">
          <div class="col-sm-6">
              <h3 class="mb-sm-4">  
-              <img src="Images/icons8-camera-100.png" alt="Photographer's page pic" title="Photographer's page" class="icons"/>
+              <img src="Images/icons8-camera-100.png" alt="Photographer's page icon" title="Photographer's page icon" class="icons"/>
               Photographer's page </h3>
           <p>I also like to take photos, especially Architecture. So on this page you can see some examples of my photography works. </p>
           <p> As a Front-end developer I've perfomed the page using the navigation links, grids, Bootstrap instruments and other developer tools. </p> 
@@ -136,7 +135,6 @@
           </div> 
              <div class="col-sm-6">
             <img src="Images/Photographer_page.jpg" alt="Photographer's page pic" title="Photographer's page" class="img-fluid rounded-3 shadow-sm border-3"/>
-           
             <div class="navigation-links mb-sm-2">
                 <a
                   href="https://inspiring-pony-73f706.netlify.app/"
