--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Adelina Hetman - Front-end developer</title>
     <meta
       name="description"
-      content="Adelina Hetman is a Front-end developer based in Europe"
+      content="Adelina Hetman - Front-end developer based in Europe"
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -87,7 +87,8 @@
             <li>Responsive features</li>
             <li>GitHub</li>
             <li>Netlify (for hosting the projects)</li>
-          </ul></div>
+          </ul>
+        </div>
            <div class="navigation-links homepagebuttoms">
                 <a
                   href="portfolio.html"
@@ -100,7 +101,8 @@
               </div>
         </div>
       </div>
-    </div></div>
+    </div>
+  </div>
     <div class="container text-center bottomLine">
       <p3> Designed and coded by Adelina Hetman, 2022 </p3>
     </div>
